@@ -47,33 +47,30 @@ class RoomControllerIntegrationTest {
 
     @BeforeEach
     void setup() {
-        // Bereinige die Datenbank
         roomRepository.deleteAll();
         appUserRepository.deleteAll();
 
-        // Erstelle Räume
         RoomModel room1 = new RoomModel(
                 "1", "Gürzenich Saal", "Martinstr. 29 50667 Köln",
                 Category.ORCHESTER_HALL, "Ein traditionsreicher Saal für Konzerte und Veranstaltungen.",
-                "123", "Ropold", "https://avatars.githubusercontent.com/u/154427648?v=4",
-                "https://github.com/Ropold", true, "https://res.cloudinary.com/dzjjlydk3/image/upload/v1733477653/sqw62kggomno2bufjaoi.jpg");
+                "123", "Testuser", "https://avatars-of-test-user.com/",
+                "https://github.com/Testuser", true, "https://res.cloudinary.com/Testuser/image/upload/Testuser/testimage1.jpg");
 
         RoomModel room2 = new RoomModel(
                 "2", "Beethoven-Saal", "Beethovenstraße 1, 53115 Bonn",
                 Category.ORCHESTER_HALL, "Ein moderner Saal für klassische Musik.",
-                "123", "Ropold", "https://avatars.githubusercontent.com/u/154427648?v=4",
-                "https://github.com/Ropold", true, "https://res.cloudinary.com/dzjjlydk3/image/upload/v1733477653/sqw62kggomno2bufjaoi.jpg");
+                "123", "Testuser", "https://avatars-of-test-user.com/",
+                "https://github.com/Testuser", true, "https://res.cloudinary.com/Testuser/image/upload/Testuser/testimage2.jpg");
 
         roomRepository.saveAll(List.of(room1, room2));
 
-        // Erstelle Benutzer mit Favoriten
         AppUser user = new AppUser(
                 "123",
-                "Ropold",
-                "Ropold Name",
-                "https://avatars.githubusercontent.com/u/154427648?v=4",
-                "https://github.com/Ropold",
-                List.of("1") // Favorit ist nur Raum "1"
+                "Testuser",
+                "Max Mustermann",
+                "https://avatars-of-test-user.com/",
+                "https://github.com/Testuser",
+                List.of("1")
         );
         appUserRepository.save(user);
     }
@@ -92,11 +89,11 @@ class RoomControllerIntegrationTest {
                         "category": "ORCHESTER_HALL",
                         "description": "Ein traditionsreicher Saal für Konzerte und Veranstaltungen.",
                         "appUserGithubId": "123",
-                        "appUserUsername": "Ropold",
-                        "appUserAvatarUrl": "https://avatars.githubusercontent.com/u/154427648?v=4",
-                        "appUserGithubUrl": "https://github.com/Ropold",
+                        "appUserUsername": "Testuser",
+                        "appUserAvatarUrl": "https://avatars-of-test-user.com/",
+                        "appUserGithubUrl": "https://github.com/Testuser",
                         "isActive": true,
-                        "imageUrl": "https://res.cloudinary.com/dzjjlydk3/image/upload/v1733477653/sqw62kggomno2bufjaoi.jpg"
+                        "imageUrl": "https://res.cloudinary.com/Testuser/image/upload/Testuser/testimage1.jpg"
                     }
                 ]
                 """));
@@ -105,13 +102,11 @@ class RoomControllerIntegrationTest {
     @Test
     @WithMockUser(username = "123")
     void addRoomToFavorites_shouldAddRoomToFavoritesAndReturnCreated() throws Exception {
-        // GIVEN: Der Raum mit der ID "2" existiert bereits
-
-        // WHEN: Der Raum mit der ID "2" wird zu den Favoriten des Benutzers hinzugefügt
+        // GIVEN Room with ID "2" exists // WHEN:
         mockMvc.perform(MockMvcRequestBuilders.post("/api/practice-hub/favorites/123/2"))
                 .andExpect(status().isCreated());
 
-        // THEN: Der Benutzer sollte jetzt Raum "2" in seinen Favoriten haben
+        // THEN:
         AppUser updatedUser = appUserRepository.findById("123").orElseThrow();
         Assertions.assertTrue(updatedUser.favorites().contains("2"));
     }
@@ -119,20 +114,19 @@ class RoomControllerIntegrationTest {
     @Test
     @WithMockUser(username = "123")
     void removeRoomFromFavorites_expectNoContent_whenRoomRemoved() throws Exception {
-        // GIVEN: Der Benutzer hat den Raum in seinen Favoriten
+        // GIVEN
         AppUser user = appUserRepository.findById("123").orElseThrow();
-        List<String> favoritesBefore = user.favorites();  // Favoriten vor der Anfrage
-        Assertions.assertTrue(favoritesBefore.contains("1")); // Sicherstellen, dass Raum "1" in den Favoriten ist
+        List<String> favoritesBefore = user.favorites();
+        Assertions.assertTrue(favoritesBefore.contains("1"));
 
-        // WHEN: Raum aus den Favoriten entfernen
-
+        // WHEN:
         mockMvc.perform(MockMvcRequestBuilders.delete("/api/practice-hub/favorites/{userId}/{roomId}", "123", "1"))
                 .andExpect(status().isNoContent());
 
-        // THEN: Der Raum sollte nicht mehr in den Favoriten des Benutzers sein
+        // THEN:
         AppUser updatedUser = appUserRepository.findById("123").orElseThrow();
         List<String> favoritesAfter = updatedUser.favorites();
-        Assertions.assertFalse(favoritesAfter.contains("1")); // Sicherstellen, dass Raum "1" entfernt wurde
+        Assertions.assertFalse(favoritesAfter.contains("1"));
     }
 
     @Test
@@ -150,11 +144,11 @@ class RoomControllerIntegrationTest {
                         "category": "ORCHESTER_HALL",
                         "description": "Ein traditionsreicher Saal für Konzerte und Veranstaltungen.",
                         "appUserGithubId": "123",
-                        "appUserUsername": "Ropold",
-                        "appUserAvatarUrl": "https://avatars.githubusercontent.com/u/154427648?v=4",
-                        "appUserGithubUrl": "https://github.com/Ropold",
+                        "appUserUsername": "Testuser",
+                        "appUserAvatarUrl": "https://avatars-of-test-user.com/",
+                        "appUserGithubUrl": "https://github.com/Testuser",
                         "isActive": true,
-                        "imageUrl": "https://res.cloudinary.com/dzjjlydk3/image/upload/v1733477653/sqw62kggomno2bufjaoi.jpg"
+                        "imageUrl": "https://res.cloudinary.com/Testuser/image/upload/Testuser/testimage1.jpg"
                     },
                     {
                         "id": "2",
@@ -163,16 +157,15 @@ class RoomControllerIntegrationTest {
                         "category": "ORCHESTER_HALL",
                         "description": "Ein moderner Saal für klassische Musik.",
                         "appUserGithubId": "123",
-                        "appUserUsername": "Ropold",
-                        "appUserAvatarUrl": "https://avatars.githubusercontent.com/u/154427648?v=4",
-                        "appUserGithubUrl": "https://github.com/Ropold",
+                        "appUserUsername": "Testuser",
+                        "appUserAvatarUrl": "https://avatars-of-test-user.com/",
+                        "appUserGithubUrl": "https://github.com/Testuser",
                         "isActive": true,
-                        "imageUrl": "https://res.cloudinary.com/dzjjlydk3/image/upload/v1733477653/sqw62kggomno2bufjaoi.jpg"
+                        "imageUrl": "https://res.cloudinary.com/Testuser/image/upload/Testuser/testimage2.jpg"
                     }
                 ]
             """));
     }
-
 
     @Test
     void getRoomById_returnRoomWithId1_whenRoomWithId1Saved() throws Exception {
@@ -188,18 +181,17 @@ class RoomControllerIntegrationTest {
                         "category": "ORCHESTER_HALL",
                         "description": "Ein traditionsreicher Saal für Konzerte und Veranstaltungen.",
                         "appUserGithubId": "123",
-                        "appUserUsername": "Ropold",
-                        "appUserAvatarUrl": "https://avatars.githubusercontent.com/u/154427648?v=4",
-                        "appUserGithubUrl": "https://github.com/Ropold",
+                        "appUserUsername": "Testuser",
+                        "appUserAvatarUrl": "https://avatars-of-test-user.com/",
+                        "appUserGithubUrl": "https://github.com/Testuser",
                         "isActive": true,
-                        "imageUrl": "https://res.cloudinary.com/dzjjlydk3/image/upload/v1733477653/sqw62kggomno2bufjaoi.jpg"
+                        "imageUrl": "https://res.cloudinary.com/Testuser/image/upload/Testuser/testimage1.jpg"
                     }
                     """));
     }
 
-
     @Test
-    @WithMockUser(username = "testUser", roles = {"USER"})
+    @WithMockUser(username = "123")
     void postRoom_shouldReturnSavedRoom() throws Exception {
         // GIVEN
         roomRepository.deleteAll();
@@ -228,7 +220,7 @@ class RoomControllerIntegrationTest {
         // THEN
         List<RoomModel> allRooms = roomRepository.findAll();
         Assertions.assertEquals(1, allRooms.size());
-        RoomModel savedRoom = allRooms.get(0);
+        RoomModel savedRoom = allRooms.getFirst();
         org.assertj.core.api.Assertions.assertThat(savedRoom)
                 .usingRecursiveComparison()
                 .ignoringFields("id", "imageUrl") // Ignoring generated fields
@@ -243,19 +235,18 @@ class RoomControllerIntegrationTest {
                         "https://avatars.example.com/testUser",
                         "https://github.com/testUser",
                         true,
-                        null // imageUrl will be set by Cloudinary
+                        null
                 ));
     }
 
-
     @Test
-    @WithMockUser(username = "testUser", roles = {"USER"})
+    @WithMockUser(username = "123")
     void updateRoomWithPut_shouldUpdateRoomDetails() throws Exception {
         // GIVEN
         RoomModel existingRoom = new RoomModel("1", "Gürzenich Saal", "Martinstr. 29 50667 Köln",
                 Category.ORCHESTER_HALL, "Ein traditionsreicher Saal für Konzerte und Veranstaltungen.",
-                "123", "Ropold", "https://avatars.githubusercontent.com/u/154427648?v=4",
-                "https://github.com/Ropold", true, "https://res.cloudinary.com/dzjjlydk3/image/upload/v1733477653/sqw62kggomno2bufjaoi.jpg");
+                "123", "TestUser", "https://avatars-of-test-user.com/",
+                "https://github.com/Testuser", true, "https://res.cloudinary.com/Testuser/image/upload/Testuser/testimage1.jpg");
         roomRepository.save(existingRoom);
         Uploader mockUploader = mock(Uploader.class);
         when(mockUploader.upload(any(), anyMap())).thenReturn(Map.of("secure_url", "https://www.updated-image.com/"));
@@ -271,9 +262,9 @@ class RoomControllerIntegrationTest {
                         "category": "ORCHESTER_HALL",
                         "description": "Ein aktualisierter Saal für Konzerte.",
                         "appUserGithubId": "123",
-                        "appUserUsername": "RopoldUpdated",
-                        "appUserAvatarUrl": "https://avatars.githubusercontent.com/u/154427648_updated?v=4",
-                        "appUserGithubUrl": "https://github.com/RopoldUpdated",
+                        "appUserUsername": "TestUserUpdated",
+                        "appUserAvatarUrl": "https://avatars.example.com/testUserUpdated",
+                        "appUserGithubUrl": "https://github.com/testUserUpdated",
                         "isActive": false
                     }
                     """.getBytes()))
@@ -291,9 +282,9 @@ class RoomControllerIntegrationTest {
                         "category": "ORCHESTER_HALL",
                         "description": "Ein aktualisierter Saal für Konzerte.",
                         "appUserGithubId": "123",
-                        "appUserUsername": "RopoldUpdated",
-                        "appUserAvatarUrl": "https://avatars.githubusercontent.com/u/154427648_updated?v=4",
-                        "appUserGithubUrl": "https://github.com/RopoldUpdated",
+                        "appUserUsername": "TestUserUpdated",
+                        "appUserAvatarUrl": "https://avatars.example.com/testUserUpdated",
+                        "appUserGithubUrl": "https://github.com/testUserUpdated",
                         "isActive": false,
                         "imageUrl": "https://www.updated-image.com/"
                     }
@@ -303,27 +294,5 @@ class RoomControllerIntegrationTest {
         RoomModel updatedRoom = roomRepository.findById("1").orElseThrow();
         Assertions.assertFalse(updatedRoom.isActive());
         Assertions.assertEquals("https://www.updated-image.com/", updatedRoom.imageUrl());
-    }
-
-
-    @Test
-    @WithMockUser(username = "testUser", roles = {"USER"})
-    void deleteRoom_shouldRemoveRoomFromRepository() throws Exception {
-        // GIVEN
-        RoomModel roomToDelete = new RoomModel("2", "Beethoven-Saal", "Beethovenstraße 1, 53115 Bonn",
-                Category.ORCHESTER_HALL, "Ein moderner Saal für klassische Musik.",
-                "123", "testUser", "https://avatars.example.com/testUser",
-                "https://github.com/testUser", true, "https://www.test.de/");
-        roomRepository.save(roomToDelete);
-        Uploader mockUploader = mock(Uploader.class);
-        when(mockUploader.destroy(any(), anyMap())).thenReturn(Map.of("result", "ok"));
-        when(cloudinary.uploader()).thenReturn(mockUploader);
-
-        // WHEN
-        mockMvc.perform(MockMvcRequestBuilders.delete("/api/practice-hub/2"))
-                .andExpect(status().isNoContent());
-
-        // THEN
-        Assertions.assertFalse(roomRepository.existsById("2"));
     }
 }
